--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
       <form id="form" action="https://www.freecodecamp.com/email-submit">
         <h2>Form</h2>
-        <input type="email" id="email" placeholder="Email">
+        <input type="email" id="email" name="email" placeholder="Email">
         <input type="submit" value="OK" id="submit">
       </form>
       
